syntax = "proto3";
package mycel.registry;

import "mycel/registry/dns_record.proto";
import "mycel/registry/wallet_record.proto";

option go_package = "github.com/mycel-domain/mycel/x/registry/types";


message DnsRecord {
  DnsRecordType dnsRecordType = 1;
  DnsRecordFormat dnsRecordFormat = 2;
  string value = 3;
}

message WalletRecord {
  WalletRecordType walletRecordType = 1;
  WalletAddressFormat walletAddressFormat = 2;
  string value = 3;
}

message Domain {
  string name = 1; 
  string parent = 2; 
  string owner = 3; 
  int64 expirationDate = 4; 
  map<string, DnsRecord> dnsRecords = 5;
  map<string, WalletRecord> walletRecords = 6;
  map<string, string> metadata = 7;
}

